--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,10 @@
 		<tag/>
 		<url/>
 	</scm>
-	<properties>
-		<java.version>25</java.version>
-	</properties>
+    <properties>
+        <java.version>21</java.version>
+        <javafx.version>17.0.6</javafx.version>
+    </properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -67,7 +68,20 @@
 			<artifactId>h2</artifactId>
 			<scope>teste</scope>
 		</dependency>
+
+        <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-controls</artifactId>
+                <version>${javafx.version}</version> </dependency>
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-fxml</artifactId>
+                <version>${javafx.version}</version>
+            </dependency>
+
 	</dependencies>
+
+
 
 	<build>
 		<plugins>
