--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,7 @@
+server:
+  port: 8081  # Porta nova para não dar conflito
+
+ #simulaçao do banco pra fazer a interface
 spring:
   application:
     name: app
@@ -8,7 +12,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-        ddl-auto: update
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
