--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
     name: app
   datasource:
     url: jdbc:postgresql://localhost:5432/app
-    username: postgres
-    password: admin
+    username: admin
+    password: admin123
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
